# allegro

./: .hgignore  README.md
srv/: Cargo.toml  diesel.toml
srv/migrations/2024-10-15-213346_users/: up.sql
srv/migrations/2024-10-18-025950_admin/: up.sql
srv/migrations/2024-10-21-235624_artists/: down.sql  up.sql
srv/migrations/2024-10-22-031135_performers/: down.sql  up.sql
srv/migrations/2024-10-23-172509_releases/: down.sql  up.sql
srv/migrations/2024-10-24-031831_composers/: down.sql  up.sql
srv/migrations/2024-10-24-031836_songwriters/: down.sql  up.sql
srv/migrations/2024-10-24-171857_piece/: down.sql  up.sql
srv/migrations/2024-10-25-001920_recordings/: down.sql  up.sql
srv/src/: insert.rs  main.rs  models.rs  schema.rs
srv/src/api/: addmusic.rs  auth.rs  get.rs  mod.rs  search.rs
ui/: components.json  package-lock.json  package.json  vite.config.ts
ui/src/: hooks.server.ts
ui/src/lib/: AddMusic.svelte  ArtistArt.svelte  PieceArt.svelte  RecordingArt.svelte  ReleaseArt.svelte  SearchResults.svelte  Sidebar.svelte  TextArea.svelte  TracksTable.svelte  music.ts  types.ts
ui/src/lib/stores/: playerStore.ts
ui/src/lib/ui/ui/command/: command-dialog.svelte
ui/src/routes/: +page.server.ts  +page.svelte
ui/src/routes/allegro/: +page.server.ts  +page.svelte
ui/src/routes/allegro/release/[id]/: +page.server.ts  +page.svelte
