[package]
name = "allegro"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
ring = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.11.0", features = ["v4"] }
